# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  comparer.py  comparing.py  console.py  parser.py  parsing.py
gendiff/formats/: json.py  plain.py  stylish.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
hexlet_code/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: test_diff_result_json.txt  test_same_result_json.txt
